[package]
name = "json-e"
version = "4.8.0"
authors = [
    "owlishDeveloper <bugzeeeeee@gmail.com>",
    "Alex Lopez <alex.lopez.zorzano@gmail.com>",
]
edition = "2018"
license = "MPL-2.0"
repository = "https://github.com/json-e/json-e"
documentation = "https://docs.rs/json-e/"
homepage = "https://json-e.js.org"
description = "A data-structure parameterization system for embedding context in JSON objects"

[dependencies]
anyhow = "1.0.32"
serde_json = "1.0"
thiserror = "1.0"
nom = "7"
lazy_static = "1.4.0"
chrono = "0.4.19"
tokio = { version = "1.40.0", features = ["rt-multi-thread", "macros"] }
futures = "0.3.31"
async-recursion = "1.1.1"
async-trait = "0.1.83"
dyn-clone = "1.0.17"

[build-dependencies]
yaml-rust = "0.4"
serde_json = "1.0.57"
